# esscale_RS_mobile

./: .gitignore  pubspec.yaml
.github/workflows/: cpp-ci.yml  flutter-cd.yml  flutter-ci.yml  manual-ci.yml
backend/: .gitignore  CMakeLists.txt  README.txt  ci.txt
backend/ServerLib/: CmakeLists.txt
backend/ServerLib/BackendLib/: CmakeLists.txt
backend/ServerLib/BackendLib/include/: utilits.hpp
backend/ServerLib/BackendLib/src/: utilits.cpp
backend/ServerLib/BackendLibTest/: .gitignore  CMakeLists.txt
backend/ServerLib/BackendLibTest/src/: main.cpp  utils.cpp
backend/ServerLib/BackendLibTest/tests/: CMakeLists.txt
backend/ServerLib/include/: Data.hpp  utilits.hpp
backend/ServerLib/src/: utilits.cpp
backend/ServerS/: .gitignore  CmakeLists.txt
backend/ServerS/TLSsecret/: server.key
backend/ServerS/include/: Data.hpp  headers.h  path.h.in  utilits.hpp  ver.h.in
backend/ServerS/src/: main.cpp
backend/include/: utils.h
backend/tests/: CMakeLists.txt  test_utils.cpp
frontend/: pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/.dart_tool/flutter_build/c599074b6c5003acc88f3133da73a19f/: .filecache  dart_build.d  dart_build.stamp  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
frontend/.dart_tool/flutter_build/dda08f01140be05b3b36d6bf1f115262/: .filecache  dart_build.d  dart_build.stamp  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp
frontend/android/app/: build.gradle.kts
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/lib/: main.dart
frontend/test/: widget_test.dart
lib/: main.dart
test/: widget_test.dart
